# tp_python

./: pyproject.toml
src/tp1/: main.py
src/tp1/utils/: capture.py  config.py  lib.py  report.py
tests/tp1/utils/: test_capture.py
tp2-shellcode-analyzer/scripts/: check_shellcode.py
tp2-shellcode-analyzer/src/tp2_shellcode_analyzer/: analyzer.py  shellcode.txt
tp2-shellcode-analyzer/tests/: test_analyzer.py
