[tool.poetry]
name = "template-code"
version = "0.1.0"
description = "Projet TP1 - IDS/IPS maison ESGI"
authors = ["Daniela Ceraku <dceraku1@myges.fr>"]
readme = "README.md"
packages = [
    { include = "tp1", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
scapy = "^2.6.1"
pygal = "^3.0.5"
reportlab = "^4.4.1"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tp1 = "tp1.main:main"
